# libhamcore

./: CMakeLists.txt  Hamcore.c
.github/workflows/: build.yml
tests/: CMakeLists.txt  RandomFile.c  RandomFile.h  TestArchiveFormat.c  TestEncodeDecode.c  Utils.c  Utils.h
